--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "akhildas.p",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
