--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "akhildas.p",
   "license": "ISC",
   "dependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -27,6 +26,7 @@
     "npm": "^10.5.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "paypal-rest-sdk": "^1.8.1",
     "sharp": "^0.33.2"
   }
 }
