forgot password chaged

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "currency-converter-lt": "^2.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
