--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "install": "^0.13.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
